--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,41 @@
 {
-  "name": "phalcon/app",
-  "version": "1.0.0",
-  "require": {
-    "php": "^8.2",
-    "ext-phalcon": "^5.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/",
-      "App\\Controllers\\": "app/controllers",
-      "App\\Models\\": "app/models",
-      "App\\Repositories\\": "app/repositories",
-      "App\\Services\\": "app/services",
-      "App\\Tasks\\": "app/tasks",
-      "App\\Exceptions\\": "app/exceptions",
-      "App\\Validations\\": "app/validations"
+    "name": "phalcon/app",
+    "version": "1.0.0",
+    "require": {
+        "php": "^8.2",
+        "ext-phalcon": "^5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "App\\Controllers\\": "app/controllers",
+            "App\\Models\\": "app/models",
+            "App\\Repositories\\": "app/repositories",
+            "App\\Services\\": "app/services",
+            "App\\Tasks\\": "app/tasks",
+            "App\\Exceptions\\": "app/exceptions",
+            "App\\Validations\\": "app/validations"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\Unit\\Services\\": "tests/unit/services"
+        }
+    },
+    "authors": [
+        {
+            "name": "Nursultan Kalibayev",
+            "email": "k8s.crm@gmail.com"
+        }
+    ],
+    "require-dev": {
+        "phalcon/devtools": "^5.0@dev",
+        "phalcon/migrations": "^3.0",
+        "phalcon/ide-stubs": "^5.9",
+        "friendsofphp/php-cs-fixer": "^3.75",
+        "fakerphp/faker": "^1.24",
+        "codeception/codeception": "^4.2",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
     }
-  },
-  "authors": [
-    {
-      "name": "Nursultan Kalibayev",
-      "email": "k8s.crm@gmail.com"
-    }
-  ],
-  "require-dev": {
-    "phalcon/devtools": "^5.0@dev",
-    "phalcon/migrations": "^3.0",
-    "phalcon/ide-stubs": "^5.9",
-    "friendsofphp/php-cs-fixer": "^3.75",
-    "fakerphp/faker": "^1.24"
-  }
 }
